--- a/_config.yml
+++ b/_config.yml
@@ -26,11 +26,14 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username: neuviemeporte
 header_pages: []
+markdown: kramdown
+highlighter: rouge
 
 # Build settings
 theme: minima
 plugins:
   - jekyll-feed
+
 
 # Exclude from processing.
 # The following items will not be processed, by default.
